--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 }
 
 .flip-card-front {
-  background-color: #da2865;
+  background-color: #f2bed0e8;
   color: whitesmoke;
 }
 
@@ -74,6 +74,39 @@ body {
   align-items: center;
   justify-content: center;
   gap: 10px;
+}
+
+#card-front {
+  width: 300px;
+  height: 200px;
+  position: relative;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+#card-front::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.front-word {
+  position: relative; 
+  color: rgb(185, 28, 96);
+  font-size: 50px;
+  z-index: 1; 
+  text-align: center; 
+  margin-top: 20%;
+}
+
+.word-image {
+  display: none; 
 }
 
 main {
@@ -157,8 +190,8 @@ progress {
   cursor: pointer;
 }
 
-.card.correct {
-  background-color: #98e2e1;
+.exam-card.correct {
+  background-color: #b6d1b9;
 }
 
 .fade-out {
@@ -166,8 +199,8 @@ progress {
   animation-fill-mode: forwards;
 }
 
-.card.wrong {
-  background-color: #f3a6be;
+.exam-card.wrong {
+  background-color: #e18d8d;
   animation: shake 0.5s;
 }
 
@@ -176,10 +209,20 @@ progress {
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  align-content: center;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 10px;
 }
+
+.exam-card {  
+  background-color: #f9f9f9; /* Цвет фона карточки */  
+  border: 1px solid #ccc; /* Цвет и стиль рамки */  
+  border-radius: 10px; /* Закругленные углы */  
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Тень для карточки */  
+  padding: 15px; /* Внутренний отступ карточки */  
+  width: 150px; /* Ширина карточки */  
+  text-align: center; /* Центрирование текста */  
+  transition: transform 0.2s; /* Плавный эффект при наведении */  
+}  
 
 #exam-mode h3 {
   font-weight: 400;
@@ -192,8 +235,8 @@ progress {
 .results-modal {
   position: absolute;
   z-index: 100;
-  width: 600px;
-  max-height: 80%;
+  width: 400px;
+  max-height: 60%;
   overflow: scroll;
   padding: 10px 20px;
   top: 50%;
